# Fetchr

./: .gitignore  Cargo.toml  README.md  package-lock.json
fetchr_core/: Cargo.toml
fetchr_core/src/: capabilities.rs  db.rs  lib.rs  logger.rs  presets.rs  queue.rs  sanitizer.rs  verification.rs
fetchr_core/src/yt_dlp/: bin_manager.rs  mod.rs  progress_parser.rs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
