[package]
name = "fetchr_desktop"
version = "0.1.0"
description = "A clean, modern wrapper around yt-dlp for creator workflows."
authors = ["Fetchr Team"]
edition = "2021"

[lib]
name = "fetchr_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
fetchr_core = { path = "../fetchr_core" }
anyhow = "1"
dirs = "5"
tracing-appender = "0.2"
tracing = "0.1"
